k8s/services/kobotoolbox/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kobotoolbox
  namespace: shopno-apps
  labels:
    app.kubernetes.io/name: kobotoolbox
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
  selector:
    app.kubernetes.io/name: kobotoolbox
    app.kubernetes.io/component: web
