k8s/services/kobotoolbox/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kobotoolbox
  namespace: shopno-apps
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: kobotoolbox

  policyTypes:
    - Ingress
    - Egress

  ingress:
    - from:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
          port: 8000

  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
